-- disabled markup sanitizer() for correct asciidoc results
-- tweaked snort.lua and snort_defaults.lua
-- updated usage
-- removed ! from error messages
-- fixed command line vs conf output configs
-- moved log_tcpdump to log_pcap
-- changed all output filename configs to be based on module name
-- fixed -K handling
-- fixed laulert when rule has no msg

122
-- pulled thread pinning from Josh
-- snort.lua tweaks to back out random test foo
-- additional valgrind tweaks
-- fixed several Xcode static analysis warnings
-- updated config_changes
-- commented out pcre_free_study() - issue on mac
-- more refactoring of tcp session - still incomplete
-- patched cd_tcp.cc and packet_manager.cc for length underflow issue
-- fix active.max_responses default, etc.
-- always change both directions to atom splitter
-- fixed byte_extract leak, session flow data leak
-- changed pcre JIT to be optional by #define; need autofoo
-- added support for name / type bindings
-- added value type checks
-- updated tips
-- updated stream_tcp counts
-- fix -A log_null etc (ie w/o module)
-- fixed --help-module format for asciidoc (again)
-- tweaked snort.lua snort_defaults.lua
-- parsing fixes
-- updated config_changes.txt
-- fixed doc format and added errors.txt
-- revised help options (again) to be more consistent with other (gnu style) programs
-- added overview page to documentation
-- pulled in latest from Josh
-- reworked pkt type vs proto bits
-- updated builtin rules for consistent format

121
-- valgrind fixes
-- basic reload restoration
-- support cmd() form of snort.cmd()
-- misc FIXITs
-- converted wizard to fully stateful
-- implemented paf rescan upon auto service id
-- changed StreamSplitter::max() from uint32_t to unsigned
-- changed stream_tcp.paf_max to max_pdu
-- added parse errors for module begin()/end() fails
-- changed reload to not fatal on parse errors

120
-- tweaked --help!
-- added unused stringify(enum)
-- fixed piroir typo
-- fixed normalizer.tcp.ips