@@ -41,13 +41,18 @@ end
 
 -- alert() is required
 function alert ()
-    -- evt is a luajit SnortEvent
+    -- get luajit structs
     local evt = ffi.C.get_event()
+    local pkt = ffi.C.get_packet()
 
     -- str is a luajit string
     local str = ffi.string(evt.msg)
 
-    print(string.format('%d:%d:%d:%s', evt.gid, evt.sid, evt.rev, str))
+    -- FIXIT - this gets:
+    -- bad argument #2 to 'format' (number expected, got cdata)
+    --print(string.format('%ld %d:%d:%d %s', pkt.num, evt.gid, evt.sid, evt.rev, str))
+
+    print(string.format('%d:%d:%d %s', evt.gid, evt.sid, evt.rev, str))
 end
 
 -- plugin table is required
