@@ -10,6 +10,7 @@ bits.h \
 codec.h \
 counts.h \
 cursor.h \
+decode_data.h \
 logger.h \
 inspector.h \
 ips_option.h \
